Fix overflow-y being not hidden on main.html

--- a/public/material-custom.css
+++ b/public/material-custom.css
@@ -4738,7 +4738,7 @@ fieldset[disabled] .mdl-checkbox .mdl-checkbox__ripple-container .mdl-ripple,
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
-    overflow-y: auto;
+    overflow-y: hidden;
     overflow-x: hidden;
     position: relative;
     -webkit-overflow-scrolling: touch
